<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QRVin</string>
    <string name="action_send_to_dms">Upload Cars to DMS</string>
    <string name="action_scan">Scan VIN</string>
    <string name="action_brightness_up">Brighter</string>
    <string name="action_see_installed_options">See Installed Options</string><string name="action_brightness_down">Darker</string>
    <string name="action_edit_options">Edit Installed Options</string><string name="action_window_sticker">Window Sticker</string><string name="action_submit">Submit</string><string name="action_type_vin">Type VIN</string><string name="action_my_cars">My Cars</string><string name="action_select_a_car">Select A Year, Make, &amp; Model</string><string name="action_settings">Settings</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    
    <string name="logout">Logout</string>
    <string name="dummy">Placeholder</string>
    
    
    <string name="prompt_vin">VIN Number</string>
    <string name="upload_progress">Sending Vin&#8230;</string>
    <string name="vin_must_be_17_chars">The VIN must be 17 letters.</string>
    
    
    <string name="connection_problem">There was a problem contacting the server. Please try again later.</string>
    <string name="label_engine">Engine</string>
    <string name="label_transmission">Transmission</string>
    <string name="label_msrp">MSRP</string>
    <string name="label_was_new">Was New</string>
    
    
    <string name="title_car_detail">Car Detail</string>
    <string name="title_car_list">Cars</string>
    <string name="title_activity_car_vin">CarVinActivity</string>
    <string name="title_activity_car_show">CarShowActivity</string>
    <string name="title_activity_edit_options">Edit Installed Options</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="title_activity_print">Print</string>

</resources>