<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:id="@+id/main_layout">

    <Button
        android:id="@+id/scan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:text="@string/action_scan" 
        android:drawableBottom="@drawable/button0"
        android:background="@drawable/qrvintheme_btn_default_holo_light"
        />
    <Button
        android:id="@+id/type_vin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:text="@string/action_type_vin" 
        android:drawableBottom="@drawable/button1"
        android:background="@drawable/qrvintheme_btn_default_holo_light"
        />

     <Button
        android:id="@+id/select_car_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:text="@string/action_select_a_car"
        android:drawableBottom="@drawable/button2" 
        android:background="@drawable/qrvintheme_btn_default_holo_light"
        />  

     <Button
        android:id="@+id/dms_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:text="@string/action_send_to_dms"
        android:background="@drawable/qrvintheme_btn_default_holo_light"
        />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >

         <Button
             android:id="@+id/brightness_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="5dp"
             style="?android:attr/buttonStyleSmall"
             android:background="@drawable/qrvintheme_btn_default_holo_light"
             android:text="@string/action_brightness_up" />

         <Button
             android:id="@+id/brightness_down"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="5dp"
             style="?android:attr/buttonStyleSmall"
             android:background="@drawable/qrvintheme_btn_default_holo_light"
             android:text="@string/action_brightness_down" />



     </LinearLayout>

</LinearLayout>

