<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CarVinActivity" >

    
     <!-- Upload progress -->

    <LinearLayout
        android:id="@+id/upload_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/upload_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/upload_progress"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->
    
    <LinearLayout
        android:id="@+id/upload_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >
        
            <TextView
                android:id="@+id/upload_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dummy" />

        <EditText
                android:id="@+id/vin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_vin"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        <Button
            android:id="@+id/vin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" >

        </Button>

    </LinearLayout>

</merge>